--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: center;
 }
+h1 {
+  font-size: 60px;
+  background-color: rgba(251, 248, 249, 0.9);
+  padding: 20px;
+  border: 3px solid black;
+}
