--- a/style/style.css
+++ b/style/style.css
@@ -26,3 +26,8 @@ h1 {
   margin-top: 50px;
   border: 3px solid black;
 }
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
