--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ h1 {
   background-color: rgba(251, 248, 249, 0.9);
   padding: 20px;
   border: 3px solid black;
+  font-family: 'Oswald', sans-serif;
 }
 .container {
   display: flex;
@@ -33,4 +34,5 @@ h1 {
 }
 h3 {
   font-size: 30px;
+  font-family: 'Oswald', sans-serif;
 }
