--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ h3 {
     color: red;
     font-family: 'Oswald', sans-serif;
   }
-  #button {
+  button {
     margin-left: 150px;
     border: none;
   }
